# submission-prototype

./: .gitignore  README.md  app.py  compile_existing_entries.py  extensions.py  import_npatlas.py  import_references.py  import_substrates.py  import_users.py  pyproject.toml  requirements.txt  seed.py
auth/: __init__.py  views.py
forms/: biological_activity.py  biosynthesis.py  biosynthesis_domains.py  biosynthesis_modules.py  biosynthesis_paths.py  common.py  edit_select.py  existing_bgc.py  form_collection.py  gene_annotation.py  min_entry.py  structure.py  tailoring.py
migrations/: env.py
migrations/versions/: 0b27f783a393_.py  244bda4a3c84_.py  47abc2e24693_.py  8008a094c567_.py  ab82488f99ba_.py  afcc227a8926_merging_two_heads.py  affa9a9fb156_.py  ba2bef42675f_.py  cc97f97c2669_.py  dc0626325afa_.py  e3dc87b2eb23_.py
models/: users.py
static/css/: bootstrap-theme.min.css  style.css
submission/: __init__.py  extensions.py
submission/admin/: __init__.py  views.py
submission/auth/: __init__.py  decorators.py  views.py
submission/edit/: __init__.py  views.py
submission/main/: __init__.py  views.py
submission/models/: __init__.py  entries.py  literature.py  npatlas.py  substrates.py  tokens.py  users.py
submission/templates/: base.html  macros.html
submission/utils/: __init__.py  common.py  custom_errors.py  custom_fields.py  custom_forms.py  (+5 more)
templates/: annotation.html  base.html  biological_activity.html  biosynth_class_specific.html  biosynthesis.html  edit.html  index.html  macros.html  min_entry.html  structure.html  tailoring.html
(+46 files in other folders)
