[project]
name = "submission"
version = "0.0.1"
description = "MIBiG submission system"
dependencies = [
    "Flask==3.0.2",
    "Flask-WTF==1.2.1",
    "rdkit==2023.09.5",
    "WTForms==3.1.2",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.0.5",
    "Flask-SQLAlchemy==3.1.1",
    "python-dotenv==1.0.1",

]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
